# EMI_deal

./: .gitignore  EMIRper.spec  deal_pdf.spec  pip.txt  pyproject.toml
src/: EMI-Report.py  docx2pdf.py  logger.py  test.py  test_openpyxl.py
src/gui/: mainWin.py  res.qrc  res_rc.py  ui_docx2pdf.py  ui_wordreplace.py
src/ui/: EMC.ui  doc.qrc  doc_rc.py  docx2pdf.ui  ui_EMC.py  ui_docx2pdf.py
template/: 2.1 Conducted EMI Measurement_3.xlsx  2.1 Conducted EMI Measurement_4.xlsx  2.1 Conducted EMI Measurement_Vdc.xlsx
使用须知/: 使用须知.md
