[project]
name = "pdf-deal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "black>=24.8.0",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.5",
    "pillow>=10.4.0",
    "pyinstaller>=6.14.2",
    "pyside6>=6.6.3.1",
    "pywin32>=311",
    "qt-material>=2.17",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
